--- a/index.html
+++ b/index.html
@@ -13,5 +13,25 @@
     <img src="./listfile/Edit_duotone.svg" alt="">
   </div>
   <p class="top-text">Task to keep organised</p>
+  <div class="bar" id="bar-1">
+    <ion-icon name="alarm-outline"></ion-icon>
+    <h2></h2>
+  </div>
+  <div class="bar" id="bar-2">
+    <img src="" alt="">
+    <h2></h2>
+  </div>
+  <div class="bar" id="bar-3">
+    <img src="" alt="">
+    <h2></h2>
+  </div>
+  <div class="bar" id="bar-4">
+    <img src="" alt="">
+    <h2></h2>
+  </div>
+  <div class="bar" id="bar-5">
+    <img src="" alt="">
+    <h2></h2>
+  </div>
 </body>
 </html>
