--- a/index.html
+++ b/index.html
@@ -14,24 +14,32 @@
   </div>
   <p class="top-text">Task to keep organised</p>
   <div class="bar" id="bar-1">
-    <ion-icon name="alarm-outline"></ion-icon>
-    <h2></h2>
+    <img class="alarm" src="./listfile/alarm-outline.svg" alt="Notification">
+    <h2 class="heading">Task in Progress</h2>
+    <img class="part1" src="./listfile/Time_atack_duotone.svg" alt="time">
   </div>
   <div class="bar" id="bar-2">
-    <img src="" alt="">
-    <h2></h2>
+    <img class="alarm" src="./listfile/bicycle-outline.svg" alt="Completed">
+    <h2 class="heading">Task Completed</h2>
+    <img class="part2" src="./listfile/Done_round_duotone.svg" alt="done">
   </div>
   <div class="bar" id="bar-3">
-    <img src="" alt="">
-    <h2></h2>
+    <img class="alarm" src="./listfile/cafe-outline.svg" alt="not to do">
+    <h2 class="heading1">Task won't do</h2>
+    <img class="part3" src="./listfile/close_ring_duotone.svg" alt="close">
   </div>
-  <div class="bar" id="bar-4">
-    <img src="" alt="">
-    <h2></h2>
+  <div class="to-do" id="bar-4">
+    <div class="bar">
+      <img class="alarm1" src="./listfile/book-outline.svg" alt="to do">
+      <h2 class="heading2">Task to do</h2>
+      <img class="part4" src="./listfile/Done_round.svg" alt="">
+    </div>
+    <p>Work on a Challenge on devChallenges.io, <br><br><br> learn TypeScript.</p>
   </div>
   <div class="bar" id="bar-5">
-    <img src="" alt="">
-    <h2></h2>
+    <img class="alarm2" src="./listfile/Add_round_duotone.svg" alt="add">
+    <h2 class="heading3">Add new task</h2>
+    <img class="part4" src="./listfile/close_ring_duotone.svg" alt="">
   </div>
 </body>
 </html>
